2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-eps.scm (output-classic-framework): start at 1 for
	system signatures.

	* buildscripts/output-distance.py (me_path): use argv[0] for
	sys.path extension
	(ComparisonData.img_cell): use colored borders.

	* scm/stencil.scm (write-system-signature): escape newlines too.
	(write-system-signature): use (1,-1) interval for empty interval

2006-01-01  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/music-glossary.tely: Spanish updates
	from Francisco Vila.

	* Documentation/user/lilypond-book.itely: addition from
	Vaclav Smilauer.

	* Documentation/user/ various: edits, small additions
	from mailist, etc.

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (tree-lib-prefix-current):
	(tree-share-prefix-current): Use version number in tree, add
	`current' symlinks.

2006-06-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: write VERSION, again.

	* make/mutopia-rules.make ($(outdir)/%.png $(outdir)/%.pdf
	$(outdir)/%.ly $(outdir)/%.ps): dump sigs for normal files too.

	* stepmake/aclocal.m4: robuster version detection.

	* buildscripts/output-distance.py
	(ComparisonData.create_html_result_page): copy only if file
	exists, fixup src paths.

	* stepmake/bin/add-html-footer.py (built): junk gulp_file()

2006-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Robustification for (gcc) version detection.
	Another datarootdir reto.

	* cygwin/postinstall-lilypond.sh: Do not fail if info docs aren't
	available.  This should be moved to postinstall-lilypond-doc.

2006-05-31  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: simplify local-WWW-post. 
	remove -type l from find.

	* buildscripts/output-distance.py (ComparisonData.compare_trees):
	fixes. Don't follow symlinks.
	(ComparisonData.create_html_result_page): remove previous results.
	insert ../python in path.

	* scripts/lilypond-book.py (PREAMBLE_LY): spacing fixes.
